[FIX] Improve contrast in dark themes for new plus and minus icons in jquery trees (eg category tree).
git-svn-id: https://svn.code.sf.net/p/tikiwiki/code/trunk@30431 b456876b-0849-0410-b77d-98878d47e9d5

--- a/styles/abse.css
+++ b/styles/abse.css
@@ -459,13 +459,19 @@ a.flip:hover,
 .share {margin-bottom: 4px}
 
 /****** Misc. Global Classes (layout and style) ****/
-/** Jquery autocomplete **/
+/**** Jquery ****/
+/** autocomplete **/
 .ac_even, .ac_odd {
 	color: #415D44;
 }
 
 .ac_over {
 	color: white;
+}
+
+/** tree **/
+.ui-icon {
+background-image:url('../lib/jquery/jquery-ui/themes/ui-darkness/images/ui-icons_cccccc_256x240.png');
 }
 
 /***** Boxes *****/
